--- a/etc/supervisor/supervisord.conf
+++ b/etc/supervisor/supervisord.conf
@@ -2,12 +2,23 @@
 
 [unix_http_server]
 file=/var/run/supervisord.sock
-chmod=0700
+chmod=0777
+
+[inet_http_server]
+port = 9090
+username = hack_me
+password = hack_me
 
 [supervisord]
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/supervisor
+logfile_maxbytes=100MB
+logfile_backups=10
+loglevel=info
+nodaemon=false
+minfds=1024
+minprocs=300
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
