--- a/etc/supervisor/supervisord.conf
+++ b/etc/supervisor/supervisord.conf
@@ -5,9 +5,12 @@ file=/var/run/supervisord.sock
 chmod=0777
 
 [inet_http_server]
-port = 9090
+###
+### Important: You have to change this
+port = 9292
 username = hack_me
 password = hack_me
+###
 
 [supervisord]
 logfile=/var/log/supervisor/supervisord.log
